# tutor_assistant_ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  entrypoint.sh  in_case_memory_problem.txt  pyproject.toml
src/: alembic.ini
src/adapters/auth/: raw.py  session.py  token.py
src/adapters/database/: mappings.py  session_db.py  source_image_db.py  sqlalchemy.py  sqlalchemy_uow.py  user_db.py
src/adapters/database/migrations/: env.py
src/adapters/database/migrations/versions/: 2025_12_26_2124-4079a89a9d9d_.py  2026_01_09_2127-d6f343c33b90_init.py  2026_01_09_2237-11826cc3428d_add_sessions.py
src/application/: authenticate.py  login_student.py  register_student.py
src/application/common/: id_provider.py  passwords.py  session_gateway.py  uow.py  user_gateway.py
src/domain/exceptions/: auth.py
src/domain/models/: attempt.py  chat.py  enums.py  session.py  students.py  test.py  user.py
src/main/: config.py  ioc.py  web.py
src/presentation/: interactor_factory.py
src/presentation/web_api/: ui.py
src/presentation/web_api/dependencies/: config.py  depends_stub.py  id_provider.py
src/presentation/web_api/static/js/: app.js
src/presentation/web_api/templates/: app.html  base.html  login.html  register.html
src/presentation/web_api/templates/partials/: chat_view.html  chats_list.html
