[tool.poetry]
name = "tutor-assistant-ai"
version = "0.1.0"
description = ""
authors = ["qospanulan <kospanovulan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.127.1"
sqlalchemy = "^2.0.45"
alembic = "^1.17.2"
psycopg2-binary = "^2.9.11"
uvicorn = "^0.40.0"
python-jose = "^3.5.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
